# SoFragment

./: README.md  config.py  dataTrainer.py  dataset.py  example.py  model.py  progress.py  pyproject.toml  testModel.py  tokenizerTrainer.py  train.csv  train.py  validate.csv  xmltrain.py
books/: book1.txt
