[project]
name = "SoFragmentElectra"
version = "0.1.0"
description = "Training system for ELECTRA model"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers>=0.13.0",
    "safetensors>=0.3.1",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "termcolor>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
